src/common/products/springprox/api/springprox.h

  typedef signed short SWORD;
  typedef signed long  SDWORD;
    typedef uint8_t  BOOL;
    typedef uint8_t  BYTE;
    typedef uint16_t WORD;
    typedef int16_t  SWORD;
    typedef uint32_t DWORD;
    typedef int32_t  SDWORD;
        typedef wchar_t TCHAR;
        typedef char TCHAR;
/* Library identification */
/* ---------------------- */

SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_GetLibrary(TCHAR library[], WORD len);
/* Return code to error message translation */
/* ---------------------------------------- */
SPRINGPROX_LIB const TCHAR   *SPRINGPROX_API SPROX_GetErrorMessage(SWORD status);
/* Reader access functions */
/* ----------------------- */

/* Open the reader (this library is not reentrant, we work with one reader at a time   */
/* Set device to the communication port name ("COM1", "USB", "/dev/ttyS2" ...) or NULL */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ReaderOpen(const TCHAR device[]);
/* Close the reader */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ReaderClose(void);
/* Suspend the reader, without destroying the handle to access it */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ReaderDeactivate(void);
/* Resume the reader */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ReaderActivate(void);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ReaderAttachSerial(HANDLE hComm);
/* Reader information functions */
/* ---------------------------- */

/* Retrieve name of the communication port */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ReaderGetDevice(TCHAR device[], WORD len);
/* Retrieve reader's firmware (type - version) */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ReaderGetFirmware(TCHAR firmware[], WORD len);
/* Retrieve communication settings between host and reader */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ReaderGetDeviceSettings(DWORD *settings);
/* Select communication settings between host and reader */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ReaderSetDeviceSettings(DWORD settings);
/* Bitmasks for SPROX_ReaderGetDeviceSettings and SPROX_ReaderSetDeviceSettings */
#define SPROX_SETTINGS_PROTOCOL_MASK       0x00000003
#define SPROX_SETTINGS_PROTOCOL_OSI        0x00000000
#define SPROX_SETTINGS_PROTOCOL_ASCII      0x00000001
#define SPROX_SETTINGS_PROTOCOL_BIN        0x00000002
#define SPROX_SETTINGS_PROTOCOL_BUS        0x00000003
#define SPROX_SETTINGS_HARDWARE_CTRL       0x00000004
#define SPROX_SETTINGS_BAUDRATE_MASK       0x00000008
#define SPROX_SETTINGS_BAUDRATE_38400      0x00000000
#define SPROX_SETTINGS_BAUDRATE_115200     0x00000008
#define SPROX_SETTINGS_CHANNEL_MASK        0x00000060
#define SPROX_SETTINGS_CHANNEL_RS232       0x00000000
#define SPROX_SETTINGS_CHANNEL_RS485       0x00000020
#define SPROX_SETTINGS_CHANNEL_USB         0x00000040
#define SPROX_SETTINGS_CHANNEL_TCP         0x00000060
#define SPROX_SETTINGS_FORCE_CHANNEL_RS485 0x00000020
#define SPROX_SETTINGS_FORCE_BAUDRATE      0x00000010
#define SPROX_SETTINGS_FORCE_PROTOCOL      0x00000004
/* Reset the reader */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ReaderReset(void);
/* Drive the LEDs */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ControlLed(BYTE led_r, BYTE led_g);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ControlLedY(BYTE led_r, BYTE led_g, BYTE led_y);
/* Configure the reader for ISO/IEC 14443-A or 14443-B or 15693 or ICODE1 operation */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_SetConfig(BYTE mode);
/* Retrieve RF chipset's information (NXP RC type and serial number) */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ReaderGetRc500Id(BYTE micore_type[5], BYTE micore_snr[4]);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_A_SelectAny(BYTE atq[2], BYTE snr[10], BYTE *snrlen, BYTE sak[1]);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_A_SelectIdle(BYTE atq[2], BYTE snr[10], BYTE *snrlen, BYTE sak[1]);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_A_SelectAgain(const BYTE snr[10], BYTE snrlen);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_A_Halt(void);
/* Layer 4 (T=CL) */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_TclA_ActivateAny(BYTE atq[2], BYTE snr[10], BYTE *snrlen, BYTE sak[1]);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_TclA_ActivateIdle(BYTE atq[2], BYTE snr[10], BYTE *snrlen, BYTE sak[1]);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_TclA_Halt(void);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_TclA_Deselect(BYTE cid);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_TclA_GetAts(BYTE cid, BYTE ats[32], BYTE *atslen);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_TclA_Pps(BYTE cid, BYTE dsi, BYTE dri);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_TclA_Exchange(BYTE fsci, BYTE cid, BYTE nad, const BYTE send_buffer[], WORD send_len, BYTE recv_buffer[], WORD *recv_len);
/* ISO/IEC 14443-B functions */
/* ------------------------- */

/* Layer 3 */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_B_SelectAny(BYTE afi, BYTE atq[11]);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_B_SelectIdle(BYTE afi, BYTE atq[11]);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_B_Halt(const BYTE pupi[4]);
/* Layer 4 (T=CL) */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_TclB_ActivateAny(BYTE afi, BYTE atq[11]);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_TclB_ActivateIdle(BYTE afi, BYTE atq[11]);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_TclB_Attrib(const BYTE atq[11], BYTE cid);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_TclB_Deselect(BYTE cid);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_TclB_Halt(const BYTE pupi[4]);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_TclB_Exchange(BYTE fsci, BYTE cid, BYTE nad, const BYTE send_buffer[], WORD send_len, BYTE recv_buffer[], WORD *recv_len);
/* ISO/IEC 14443 type independant functions */
/* ------------------------------------------ */

SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_Tcl_Exchange(BYTE cid, const BYTE send_buffer[], WORD send_len, BYTE recv_buffer[], WORD *recv_len);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_Bi_Attrib(BYTE uid[4]);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_Bi_Exchange(const BYTE send_buffer[], WORD send_len, BYTE recv_buffer[], WORD *recv_len);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_Bi_Disc(void);
/* Find functions */
/* -------------- */

SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_Find(WORD want_protos, WORD *got_proto, BYTE uid[32], BYTE *uidlen);
/* Legacy Mifare functions */
/* ----------------------- */

/* Mifare is a registered trademark of Philips.                            */
/* Please refer to Philips documentation for any explanation on this part. */

SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_MifStSelectAny(BYTE snr[10], BYTE atq[2], BYTE sak[1]);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_MifStSelectIdle(BYTE snr[10], BYTE atq[2], BYTE sak[1]);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_MifStSelectAgain(const BYTE snr[4]);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_MifStHalt(void);
/* Mifare read, without authentication (Mifare UltraLight cards) */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_MifRead(const BYTE snr[4], BYTE addr, BYTE data[16]);
/* Mifare standard authenticate and read */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_MifStReadBlock(const BYTE snr[4], BYTE block, BYTE data[16], const BYTE key_val[6]);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_MifStReadSector(const BYTE snr[4], BYTE sector, BYTE data[240], const BYTE key_val[6]);
/* Mifare standard authenticate and write */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_MifStWriteBlock(const BYTE snr[4], BYTE block, const BYTE data[16], const BYTE key_val[6]);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_MifStWriteSector(const BYTE snr[4], BYTE sector, const BYTE data[240], const BYTE key_val[6]);
/* Mifare standard counter manipulation */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_MifStReadCounter(const BYTE snr[4], BYTE block, SDWORD *value, const BYTE key_val[6]);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_MifStWriteCounter(const BYTE snr[4], BYTE block, SDWORD value, const BYTE key_val[6]);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_MifStDecrementCounter(const BYTE snr[4], BYTE block, DWORD step, const BYTE key_val[6]);
/* Mifare standard sector trailers formatting */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_MifStUpdateAccessBlock(const BYTE snr[4], BYTE sect, const BYTE old_key_val[6], const BYTE new_key_A[6], const BYTE new_key_B[6], BYTE ac0, BYTE ac1, BYTE ac2, BYTE ac3);
/* Load a Mifare standard key into reader's memory (RAM or EEPROM) */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_MifLoadKey(BOOL eeprom, BYTE key_type, BYTE key_offset, const BYTE key_val[6]);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ArrayToString(TCHAR *string, const BYTE *buffer, WORD size);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_StringToArray(BYTE *buffer, const TCHAR *string, WORD size);